main.css
:root {
    --main-color: #4F788D;
    --dark-blue: #2F4A57;
    --light-blue: #A5BFC5;
    --floral-green: #3A5E48;
    --accent: #E87F4D;
    --off-white: #fafcff;
}

body {
    background-color: var(--off-white);
    font-family: 'Raleway', sans-serif;
}

main {
    min-height: calc(100vh - 5vh);
}

header {
    background-color: var(--off-white);
    color: var(--dark-blue)
}

#my-name {
    font-family: 'Lora', serif;
}

#contact-button {
    background-color: var(--accent);
    color: white;
    font-weight: bold;
    border: var(--accent);
    min-width: 50%;
    max-width: 75%;
}
div.popover-body i::before {
    font-size: 3rem;
    color: var(--main-color);
}
div.popover-body span {
    font-size: 1.25rem;
}

a:link {
    color: var(--floral-green);
}
a:visited {
    color: var(--floral-green);
}
a:focus,
a:hover,
a:active {
    color: var(--accent);
}

#skill-summary {
    background-color: var(--main-color);
    color: white;
    min-height: 100%;
}

#skill-summary li p {
    margin-top: .5rem;
    margin-bottom: 0;
}

#description {
    background-color: var(--off-white);
    color: var(--dark-blue);
    min-height: 100%;
}

#description section {
    border-top: 1px solid var(--light-blue);
    margin-bottom: 2rem;
    padding-top: 1rem;
}

#description section h3,
#description section h5 {
    font-weight: bold;
}

img.brand-logo {
    height: 1rem;
}

#experience div.experience-header * {
    margin-top: 0;
    margin-bottom: 0;
}
#experience p.location {
    text-align: right;
}
#experience p.time-period {
    text-align: right;
}

#education .location {
    text-align: right;
}

#references .phone {
    text-align: right;
}

.tooltip.show {
    opacity: 1;
}
.tooltip .tooltip-inner {
    background-color: var(--floral-green);
    color: var(--off-white);
    max-width: 30em;
}
.tooltip-arrow {
    visibility: hidden;
}

.present {
    font-style: italic;
}

footer#footer {
    position: relative;
    height: 5vh;
    margin: 0px;
    padding: 0px;
    clear:both;
    text-align: center;
    background-color: var(--off-white);
    color: var(--main-color);
}

